<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list_item">List Item</string>
    <string name="simple_demo">Simple Demo</string>
    <string name="carousel">Carousel</string>
    <string name="extended_carousel">Extended Carousel</string>
    <string name="first_stage">First Stage</string>
    <string name="second_stage">Second Stage</string>
    <string name="image_demo">Image Demo</string>
    <string name="click">Click</string>
    <string name="click_demo">Click Demo</string>

    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
    </string-array>

</resources>
